# EASY64

./: .gitignore  00_math.c  00_math.cpp  01_String-test.c  01_math-parse.cpp  02_CPT-01.cpp  EASY64.h  LICENSE  README.md  String.c  Structs.c  atoms.cpp  makefile  za_attempt-1.cpp
c/: 01_String-test.c  String.c
cpp/: 01_math-parse.cpp  02_CPT-01.cpp  za_attempt-1.cpp
cpp/CPluscal/: 00_basic-lexing.cpp  00_chars.cpp  00_tokenize-file.cpp  01_interpreter_test-01.cpp  01_math-ops.cpp  02_interpreter-test-00.cpp  02_interpreter_blocks-02.cpp  03_IO-test.cpp  AST_Node.cpp  CMakeLists.txt  CPluscal.hpp  README.md  interpreter.cpp  json.cpp  lexer.cpp  lexing_basic.cpp  lexing_file.cpp  math.cpp  parser.cpp  primitives.cpp  terminal.cpp  types_builtin.cpp  utils.cpp  zz_README.md
cpp/CPluscal/Claude/: add_variants.cpp  ast_builder.cpp
cpp/CPluscal/Gemini/: add_variants.cpp
cpp/CPluscal/PAS_Test/: 00_sections.pas  copy_input.pas  input.pas  temperature.pas
cpp/CPluscal/include/: CPluscal.hpp
cpp/CPluscal/za_YAGNI/: lex_and_interpret.cpp  math.cpp
cpp/CPluscal/zb_Archive/: 01_interpreter_test-01.cpp  CMakeLists.txt  CPluscal.hpp  json.cpp  lexing_basic.cpp  types_builtin.cpp  utils.hpp  zz_README.md
cpp/CPluscal/zz_Future/: AST_Node.cpp
cpp/ChatGPT/: AST.cpp  AST.h  Parser.h
cpp/Claude/: SimpleCompilerLLVM.cpp  SimpleInterpreter.cpp
cpp/za_Archive/: 01_math-parse.cpp  za_attempt-1.cpp
